--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,11 @@
 
 
 <dependency>
-			<groupId>io.qameta.allure</groupId>
-			<artifactId>allure-testng</artifactId>
-			<version>2.30.0</version>
-		</dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-testng</artifactId>
+    <version>2.27.0</version>
+    <scope>test</scope>
+</dependency>
 	</dependencies>
 	<build>
  
